@@ -1,3 +1,9 @@
+2002-02-11  Aaron W LaFramboise  <AWLaFramboise@aol.com>
+
+	* include/bits/locale_facets.tcc (collate::do_hash): Fix.
+	* testsuite/22_locale/collate_members_char.cc (test03): New test.
+	* testsuite/22_locale/collate_members_wchar_t.cc (test03): Same.
+	
 2002-02-10  Phil Edwards  <pme@gcc.gnu.org>
 
 	* include/bits/stl_algo.h (transform (both signatures), generate_n):
